[project]
name = "etlagenticxmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-langchain>=0.9.0",
    "databricks-sdk>=0.73.0",
    "fastmcp>=2.13.0.2",
    "gitpython>=3.1.45",
    "groq>=0.34.1",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.0.1",
    "langgraph>=1.0.3",
    "orjson>=3.11.4",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]
